# bdl-2025-fairytale-generator

./: .env.dist  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data_app/: app.py  requirements.txt
knowledge/: how_keboola_generate_links.txt
src/fairytale_crew/: crew.py  main.py
src/fairytale_crew/config/: agents.yaml  tasks.yaml
src/keboola_doc/: crew.py  main.py
src/keboola_doc/config/: agents.yaml  tasks.yaml
