[project]
name = "keboola_doc"
version = "0.1.0"
description = "keboola-doc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.49.0",
    "crewai[tools]>=0.140.0,<1.0.0",
]

[project.scripts]
keboola_doc = "keboola_doc.main:run"
run_crew = "keboola_doc.main:run"
train = "keboola_doc.main:train"
replay = "keboola_doc.main:replay"
test = "keboola_doc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
